# colima-poc

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
