[tool.poetry]
name = "colima-poc"
version = "0.1.0"
description = "Container that causes Colima problems"
authors = ["Michał Konarski"]

[tool.poetry.dependencies]
python = "~3.8"
prometheus_client = "^0.8.0"
isodate = "^0.6.0"
dacite = "^1.5.1"
python3-openid = "^3.1.0"
wtforms = "^2.3.3"
pandas = "1.4.0"
scipy = "1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mypy = "^0.812"
black = "^20.8b1"
invoke = "^1.6.0"
cookiecutter = "^1.7.3"
Jinja2 = ">=2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
